remove subversion revision

--- a/modules/org.pathvisio.launcher/build.xml
+++ b/modules/org.pathvisio.launcher/build.xml
@@ -3,10 +3,9 @@
 
 	<import file="../../build-common.xml" />
 	
-	<target name="prepare" depends="svnversion">
+	<target name="prepare">
 		<mkdir dir="resources"/>
 		<echo file="resources/version.props">
-pathvisio.revision = ${subversion_revision}
 pathvisio.version = ${pathvisio.version}
 		</echo>
 	</target>
