--- a/build.xml
+++ b/build.xml
@@ -119,6 +119,16 @@
 				<include name="org.pathvisio.*.jar"/>
 				<include name="javax.*.jar"/>
 				<include name="commons-math*.jar"/>
+				<include name="poi-ooxml-3.15.jar"/>
+				<include name="poi-3.15.jar"/>
+				<include name="poi-ooxml-schemas-3.15.jar"/>
+				<include name="curvesapi-1.04.jar"/>
+				<include name="xmlbeans-2.6.0.jar"/>
+				<include name="commons-codec-1.10.jar"/>
+				<include name="commons-collections4-4.1.jar"/>
+				<include name="poi-excelant-3.15.jar"/>
+				<include name="poi-scratchpad-3.15.jar"/>
+
 				<include name="com.springsource*.jar"/>
 				<include name="org.apache.felix.bundlerepository-1.6.6.jar"/>
 			</fileset>
