--- a/modules/org.pathvisio.gui/pom.xml
+++ b/modules/org.pathvisio.gui/pom.xml
@@ -5,7 +5,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.pathvisio</groupId>
-  <artifactId>org.pathvisio.core</artifactId>
+  <artifactId>org.pathvisio.gui</artifactId>
   <packaging>bundle</packaging>
 
   <version>3.4.0-SNAPSHOT</version>
@@ -26,24 +26,14 @@
       <version>1.0.0</version>
     </dependency>
     <dependency>
-      <groupId>org.jdom</groupId>
-      <artifactId>com.springsource.org.jdom</artifactId>
-      <version>1.1.0</version>
+      <groupId>org.pathvisio</groupId>
+      <artifactId>org.pathvisio.core</artifactId>
+      <version>3.4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.xmlgraphics</groupId>
-      <artifactId>batik-svggen</artifactId>
-      <version>1.7</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.xmlgraphics</groupId>
-      <artifactId>batik-transcoder</artifactId>
-      <version>1.7</version>
-    </dependency>
-    <dependency>
-      <groupId>org.bridgedb</groupId>
-      <artifactId>org.bridgedb.bio</artifactId>
-      <version>2.3.0</version>
+      <groupId>jgoodies</groupId>
+      <artifactId>forms</artifactId>
+      <version>1.0.5</version>
     </dependency>
   </dependencies>
 
