--- a/modules/org.pathvisio.gui/pom.xml
+++ b/modules/org.pathvisio.gui/pom.xml
@@ -9,7 +9,7 @@
   <packaging>bundle</packaging>
 
   <version>3.4.0-SNAPSHOT</version>
-  <name>PathVisio Core</name>
+  <name>PathVisio GUI</name>
 
   <repositories>
     <repository>
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.osgi.core</artifactId>
-      <version>1.0.0</version>
+      <version>1.4.0</version>
     </dependency>
     <dependency>
       <groupId>org.pathvisio</groupId>
