--- a/modules/org.pathvisio.gex/pom.xml
+++ b/modules/org.pathvisio.gex/pom.xml
@@ -5,36 +5,16 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.pathvisio</groupId>
-  <artifactId>org.pathvisio.desktop</artifactId>
+  <artifactId>org.pathvisio.gex</artifactId>
   <packaging>bundle</packaging>
 
   <version>3.4.0-SNAPSHOT</version>
-  <name>PathVisio Desktop</name>
+  <name>PathVisio GEX</name>
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <version>1.4.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.bridgedb</groupId>
-      <artifactId>org.bridgedb.rdb.construct</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.bridgedb</groupId>
-      <artifactId>org.bridgedb.gui</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-    <dependency>
       <groupId>org.pathvisio</groupId>
-      <artifactId>org.pathvisio.gui</artifactId>
-      <version>3.4.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.pathvisio</groupId>
-      <artifactId>org.pathvisio.data</artifactId>
+      <artifactId>org.pathvisio.visualization</artifactId>
       <version>3.4.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
