--- a/modules/org.pathvisio.launcher/pom.xml
+++ b/modules/org.pathvisio.launcher/pom.xml
@@ -5,11 +5,11 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.pathvisio</groupId>
-  <artifactId>org.pathvisio.desktop</artifactId>
+  <artifactId>org.pathvisio.launcher</artifactId>
   <packaging>bundle</packaging>
 
   <version>3.4.0-SNAPSHOT</version>
-  <name>PathVisio Desktop</name>
+  <name>PathVisio Launcher</name>
 
   <dependencies>
     <dependency>
@@ -18,23 +18,8 @@
       <version>1.4.0</version>
     </dependency>
     <dependency>
-      <groupId>org.bridgedb</groupId>
-      <artifactId>org.bridgedb.rdb.construct</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.bridgedb</groupId>
-      <artifactId>org.bridgedb.gui</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-    <dependency>
       <groupId>org.pathvisio</groupId>
-      <artifactId>org.pathvisio.gui</artifactId>
-      <version>3.4.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.pathvisio</groupId>
-      <artifactId>org.pathvisio.data</artifactId>
+      <artifactId>org.pathvisio.core</artifactId>
       <version>3.4.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
