--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -17,6 +17,33 @@
     <module>org.pathvisio.data</module>
     <module>org.pathvisio.desktop</module>
     <module>org.pathvisio.pluginmanager</module>
+    <module>org.pathvisio.launcher</module>
+    <module>org.pathvisio.visualization</module>
+    <module>org.pathvisio.gex</module>
+    <module>org.pathvisio.statistics</module>
+    <module>org.pathvisio.exe</module>
   </modules>
+
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <executions>
+        <execution>
+          <goals>
+            <goal>shade</goal>
+          </goals>
+          <configuration>
+            <shadedArtifactAttached>true</shadedArtifactAttached>
+            <transformers>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <mainClass>org.pathvisio.launcher.PathVisioMain</mainClass>
+              </transformer>
+            </transformers>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
 
 </project>
