--- a/modules/org.pathvisio.exe/pom.xml
+++ b/modules/org.pathvisio.exe/pom.xml
@@ -4,11 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.pathvisio</groupId>
-  <artifactId>pathvisio-exe</artifactId>
+  <parent>
+     <groupId>org.pathvisio</groupId>
+     <artifactId>pathvisio</artifactId>
+     <version>3.4.0-SNAPSHOT</version>
+  </parent>
   <packaging>jar</packaging>
 
-  <version>3.4.0-SNAPSHOT</version>
+  <artifactId>pathvisio-exe</artifactId>
   <name>PathVisio Exectutable</name>
 
   <dependencies>
@@ -34,6 +37,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>3.1.1</version>
         <executions>
           <execution>
             <goals>
