--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -2,13 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.pathvisio</groupId>
-  <artifactId>pathvisio</artifactId>
+
+  <parent>
+     <groupId>org.pathvisio</groupId>
+     <artifactId>pathvisio-project</artifactId>
+     <version>3.4.0-SNAPSHOT</version>
+  </parent>
   <packaging>pom</packaging>
 
-  <version>3.4.0-SNAPSHOT</version>
+  <artifactId>pathvisio</artifactId>
   <name>PathVisio</name>
 
   <modules>
@@ -23,27 +26,5 @@
     <module>org.pathvisio.statistics</module>
     <module>org.pathvisio.exe</module>
   </modules>
-
-  <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-shade-plugin</artifactId>
-      <executions>
-        <execution>
-          <goals>
-            <goal>shade</goal>
-          </goals>
-          <configuration>
-            <shadedArtifactAttached>true</shadedArtifactAttached>
-            <transformers>
-              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                <mainClass>org.pathvisio.launcher.PathVisioMain</mainClass>
-              </transformer>
-            </transformers>
-          </configuration>
-        </execution>
-      </executions>
-    </plugin>
-  </plugins>
 
 </project>
