Add the resources to the jars

--- a/modules/org.pathvisio.gex/pom.xml
+++ b/modules/org.pathvisio.gex/pom.xml
@@ -24,6 +24,11 @@
 
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
