update jdom library to version 2.0.1

--- a/modules/org.pathvisio.pluginmanager/build.xml
+++ b/modules/org.pathvisio.pluginmanager/build.xml
@@ -6,7 +6,7 @@
   	<path id="project.class.path">
 		<fileset dir="../../lib">
 			<include name="org.eclipse.osgi.jar"/>
-			<include name="com.springsource.org.jdom-1.1.0.jar"/>
+			<include name="com.springsource.org.jdom-*.jar"/>
 			<include name="org.pathvisio.jgoodies.forms.jar"/>
 			<include name="org.apache.felix.bundlerepository-1.6.6.jar"/>
 		</fileset>
