--- a/modules/org.pathvisio.core/build.xml
+++ b/modules/org.pathvisio.core/build.xml
@@ -24,7 +24,7 @@ class Revision
 		<include name="org.w3c.*.jar"/>
 		<include name="javax.xml*.jar"/>
 		<include name="org.pathvisio.pdftranscoder.jar"/>
-		<include name="com.springsource.org.jdom-1.1.0.jar"/>
+		<include name="com.springsource.org.jdom*.jar"/>
 		<include name="org.bridgedb.jar"/>
 		<include name="org.bridgedb.bio.jar"/>
 		<include name="org.bridgedb.rdb.jar"/>
