--- a/modules/org.pathvisio.core/build.xml
+++ b/modules/org.pathvisio.core/build.xml
@@ -25,9 +25,9 @@ class Revision
 		<include name="javax.xml*.jar"/>
 		<include name="org.pathvisio.pdftranscoder.jar"/>
 		<include name="com.springsource.org.jdom*.jar"/>
-		<include name="org.bridgedb.jar"/>
-		<include name="org.bridgedb.bio.jar"/>
-		<include name="org.bridgedb.rdb.jar"/>
+		<include name="org.bridgedb*.jar"/>
+		<include name="org.bridgedb.bio*.jar"/>
+		<include name="org.bridgedb.rdb*.jar"/>
 	  </fileset>
 	</path>
 
