--- a/modules/org.pathvisio.data/build.xml
+++ b/modules/org.pathvisio.data/build.xml
@@ -5,7 +5,7 @@
 
   	<path id="project.class.path">
 		<fileset dir="../../lib">
-			<include name="org.bridgedb.jar"/>
+			<include name="org.bridgedb*.jar"/>
 			<include name="commons-math-2.0.jar"/>
 		</fileset>
 	</path>
