--- a/modules/org.pathvisio.desktop/build.xml
+++ b/modules/org.pathvisio.desktop/build.xml
@@ -14,11 +14,11 @@
 		<include name="org.w3c.dom.svg*.jar"/>
 		<include name="org.pathvisio.pdftranscoder.jar"/>
 		<include name="com.springsource.org.jdom-*.jar"/>
-		<include name="org.bridgedb.jar"/>
-		<include name="org.bridgedb.bio.jar"/>
-		<include name="org.bridgedb.rdb.jar"/>
-		<include name="org.bridgedb.rdb.construct.jar"/>
-		<include name="org.bridgedb.gui.jar"/>
+		<include name="org.bridgedb*.jar"/>
+		<include name="org.bridgedb.bio*.jar"/>
+		<include name="org.bridgedb.rdb*.jar"/>
+		<include name="org.bridgedb.rdb.construct*.jar"/>
+		<include name="org.bridgedb.gui*.jar"/>
 		<include name="org.pathvisio.jgoodies.forms.jar"/>
 		<include name="commons-math-2.0.jar"/>
 		<include name="org.eclipse.osgi.jar"/>
