--- a/modules/org.pathvisio.desktop/build.xml
+++ b/modules/org.pathvisio.desktop/build.xml
@@ -5,7 +5,7 @@
 
 	<path id="project.class.path">
 	  <fileset dir="../../lib">
-	  	<include name="org.apache.batik.*.jar"/>
+	  	<include name="org.apache.servicemix.bundles.batik*.jar" />
 		<include name="org.apache.xml*.jar"/>
 		<include name="org.apache.xalan*.jar"/>
 		<include name="org.apache.xerces*.jar"/>
