--- a/modules/org.pathvisio.desktop/build.xml
+++ b/modules/org.pathvisio.desktop/build.xml
@@ -13,7 +13,7 @@
 		<include name="org.w3c.dom.smil*.jar"/>
 		<include name="org.w3c.dom.svg*.jar"/>
 		<include name="org.pathvisio.pdftranscoder.jar"/>
-		<include name="com.springsource.org.jdom-*.jar"/>
+	  	<include name="org.apache.servicemix.bundles.jdom*.jar" />
 		<include name="org.bridgedb*.jar"/>
 		<include name="org.bridgedb.bio*.jar"/>
 		<include name="org.bridgedb.rdb*.jar"/>
