BridgeDb 3.0.20-SNAPSHOT with fixed OSGi for org.bridgedb.webservice.bridgerest

--- a/build.xml
+++ b/build.xml
@@ -114,7 +114,7 @@
 			<fileset dir="lib">
 				<include name="org.apache*.jar"/>
 				<include name="org.w3c*.jar"/>
-				<include name="derby.jar"/>
+				<include name="derby*.jar"/>
 				<include name="org.bridgedb*.jar"/>
 				<include name="org.pathvisio.*.jar"/>
 				<include name="javax.*.jar"/>
